fix: fixing overflow-x on mobile version

--- a/style/style.css
+++ b/style/style.css
@@ -346,7 +346,7 @@ input::-webkit-inner-spin-button {
 }
 .product {
   padding-bottom: 15px;
-  margin: 40px;
+  margin: 30px;
   width: 300px;
   text-align: left;
   align-self: center;
@@ -579,7 +579,7 @@ input::-webkit-inner-spin-button {
     scrollbar-width: initial;
     padding: 0;
     margin: 0;
-    /* overflow-x: hidden; */
+    /* overflow-y: hidden; */
   }
   .header {
     flex-direction: column;
@@ -591,7 +591,7 @@ input::-webkit-inner-spin-button {
     font-size: 30px;
     font-weight: 700;
     position: absolute;
-    padding-left: 4px;
+    margin-left: 10px;
     margin-top: 10px;
     cursor: pointer;
   }
@@ -744,8 +744,7 @@ input::-webkit-inner-spin-button {
   }
 
   .products {
-    margin: 5px -20px;
-    padding: 10px 40px;
+    max-width: 100%;
     justify-content: space-around;
   }
 
